# devin-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  devin.yml  release.yml
examples/: devin.yml
src/: context.py  devin_client.py  errors.py  github_client.py  logging_utils.py  main.py  prompt.py  resolver.py
tests/: conftest.py  test_context.py  test_devin_client.py  test_main.py  test_prompt.py  test_resolver.py
tests/fixtures/: check_run.json  issue_comment.json  issue_comment_pr.json  pull_request.json  pull_request_review_comment.json  push.json
